// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkFlareBar should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-flare-bar__container"
  >
    <svg
      class="bpk-flare-bar__curve"
      viewBox="0 0 14832 55"
    >
      <path
        d="M7501.307 8.517l-68.043 39.341c-10.632 6.185-23.795 6.185-34.528 0l-68.144-39.34c-8.91-5.173-18.988-8.215-29.316-8.518H0v55h14832V0H7530.671a63.604 63.604 0 00-29.364 8.517z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`BpkFlareBar should render correctly with "rounded" set to \`false\` 1`] = `
<DocumentFragment>
  <div
    class="bpk-flare-bar__container"
  >
    <svg
      class="bpk-flare-bar__curve"
      viewBox="0 0 14832 55"
    >
      <path
        d="M7501.307 8.517l-68.043 39.341c-10.632 6.185-23.795 6.185-34.528 0l-68.144-39.34c-8.91-5.173-18.988-8.215-29.316-8.518H0v55h14832V0H7530.671a63.604 63.604 0 00-29.364 8.517z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`BpkFlareBar should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-flare-bar__container my-custom-class"
  >
    <svg
      class="bpk-flare-bar__curve"
      viewBox="0 0 14832 55"
    >
      <path
        d="M7501.307 8.517l-68.043 39.341c-10.632 6.185-23.795 6.185-34.528 0l-68.144-39.34c-8.91-5.173-18.988-8.215-29.316-8.518H0v55h14832V0H7530.671a63.604 63.604 0 00-29.364 8.517z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`BpkFlareBar should render correctly with a "svgClassName" attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-flare-bar__container"
  >
    <svg
      class="bpk-flare-bar__curve my-custom-class"
      viewBox="0 0 14832 55"
    >
      <path
        d="M7501.307 8.517l-68.043 39.341c-10.632 6.185-23.795 6.185-34.528 0l-68.144-39.34c-8.91-5.173-18.988-8.215-29.316-8.518H0v55h14832V0H7530.671a63.604 63.604 0 00-29.364 8.517z"
      />
    </svg>
  </div>
</DocumentFragment>
`;
